--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -1,4 +1,4 @@
-name: jr-cms ci
+name: JR-CMS CI
 
 on:
   push:
@@ -13,23 +13,24 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x]
-        mongodb-version: ['4.0', '4.4']
+        mongodb-version: ['4.0','4.4']
 
 
     steps:
-      - name: git checkout
+      - name: Git checkout
         uses: actions/checkout@v2
 
-      - name: use Node.js ${{matrix.node-version}}
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-          node-version: ${{matrix.node-version}}
+          node-version: ${{ matrix.node-version }}
 
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.6.0
         with:
-          mongodb-version: ${{ matrix mongodb-version}}
+          mongodb-version: ${{ matrix.mongodb-version }}
 
       - run: npm install
 
       - run: npm test
+
